# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.733 2010/02/08 13:18:13 mpagano Exp $

*git-sources-2.6.33_rc7-r1 (08 Feb 2010)

  08 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc7-r1.ebuild:
  Version bump

*git-sources-2.6.33_rc7 (06 Feb 2010)

  06 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.33_rc5.ebuild, -git-sources-2.6.33_rc5-r1.ebuild,
  -git-sources-2.6.33_rc5-r2.ebuild, -git-sources-2.6.33_rc5-r3.ebuild,
  -git-sources-2.6.33_rc5-r4.ebuild, -git-sources-2.6.33_rc5-r5.ebuild,
  -git-sources-2.6.33_rc5-r6.ebuild, +git-sources-2.6.33_rc7.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.33_rc6-r6 (06 Feb 2010)
*git-sources-2.6.33_rc5-r6 (06 Feb 2010)

  06 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc5-r6.ebuild, +git-sources-2.6.33_rc6-r6.ebuild:
  Version bump

*git-sources-2.6.33_rc6-r5 (05 Feb 2010)

  05 Feb 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc6-r5.ebuild:
  Version bump

*git-sources-2.6.33_rc6-r4 (04 Feb 2010)

  04 Feb 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc6-r4.ebuild:
  Version bump

*git-sources-2.6.33_rc6-r3 (03 Feb 2010)

  03 Feb 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc6-r3.ebuild:
  Version bump

*git-sources-2.6.33_rc6-r2 (03 Feb 2010)

  03 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc6-r2.ebuild:
  Version bump

*git-sources-2.6.33_rc6-r1 (02 Feb 2010)

  02 Feb 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc6-r1.ebuild:
  Version bump

*git-sources-2.6.33_rc6 (29 Jan 2010)

  29 Jan 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.33_rc4.ebuild, -git-sources-2.6.33_rc4-r1.ebuild,
  -git-sources-2.6.33_rc4-r2.ebuild, -git-sources-2.6.33_rc4-r3.ebuild,