@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST patch-2.6.33-rc6-git1.bz2 40416 RMD160 426aa82388063a86a2d683c91afa09f79fb5ea94 SHA1 9f376d23b15f1e31b0014376a55014f1430f2f3b SHA256 2977ad85c0d936e54ebed69073671c9e968965f2ed5e78e75684e49ad5380155
 DIST patch-2.6.33-rc6-git2.bz2 46868 RMD160 d420a5565cb7f534cb2b284b6c0dfbef8539cf5f SHA1 4e3ecb071b28d66cbc7c7f6f83ab7918a1f90de2 SHA256 0083257dcae4f73d583d075c0573769f866390bbd608d0d4d0c5bc5bd70ee20d
@@ -7,6 +10,7 @@ DIST patch-2.6.33-rc6-git5.bz2 71071 RMD160 b3d96f792401d825e70121275bcf8dbaa20f
 DIST patch-2.6.33-rc6-git6.bz2 76681 RMD160 c4023fd8f4950fb26a1d9ffe990fc1fc901d99f5 SHA1 baf53d05bb03325984662b395dce928dc43e5bfd SHA256 cb76617fa2ca934fdd1744bcadd99c5159adf5e03f8d03fd5c1034d88f461141
 DIST patch-2.6.33-rc6.bz2 10414342 RMD160 cda487173d9d9cc15ce675aa487a1bba3428f368 SHA1 082dc6048eb7423c4beda0a62e785a010752b49a SHA256 8b8ac844b7154d952469587bcb9d2cff089cc71ccd7522e38eedcdc1f2c007a5
 DIST patch-2.6.33-rc7-git1.bz2 5598 RMD160 7c714a708bbd8c80140e10d58068c1c299129552 SHA1 880d63f9faa34732075b65dbd5b6d5975fabf062 SHA256 e505cf8c969dd36bf9b81918940c60cd49ab5907341953fcb7224df87db503e4
+DIST patch-2.6.33-rc7-git2.bz2 8516 RMD160 fbf4879a75ada4d164be9ccb87d4be4a1c3f54e0 SHA1 98c6c37e90c99ffb6f9ec5b3159338b13fae7606 SHA256 cf449bc1e39941ad3a0706d5b912d2d0950ec328d94766c95ee1a68556eeb004
 DIST patch-2.6.33-rc7.bz2 10488988 RMD160 c8e00f5f77a54dbce90a209c1bb1782565768330 SHA1 4d908c14082d755824ecae91fd4e7c34f7d23e14 SHA256 8cd304b686ea9a29843952bbb43b9ae53fce6884d3c22187407c30d1acf83664
 EBUILD git-sources-2.6.33_rc6-r1.ebuild 1246 RMD160 43da0cdd9930a461b172381f8ee0cc2281519918 SHA1 14ddfc211ce0ec37d694d04f2ca7bb545f52d0e2 SHA256 8ab4188590208b648333ca181f228ce22b655a9dea13c115452b85e05457b7e6
 EBUILD git-sources-2.6.33_rc6-r2.ebuild 1246 RMD160 1e8be0438b91fb9c44e6927d061ad8258669b35f SHA1 1d43d9c149bb59e8457573289010991b522cad24 SHA256 d54cb1ed8ed58fae46869cb406dc26f2220e9bcb01656fa059df952e465b9af7
@@ -16,6 +20,14 @@ EBUILD git-sources-2.6.33_rc6-r5.ebuild 1246 RMD160 cb4312a922b6187f59375de04bf8
 EBUILD git-sources-2.6.33_rc6-r6.ebuild 1246 RMD160 02aea41eb97b10db805eea91dc96254abd5435f9 SHA1 6feeea34eacab34e35b69d92308515d1f4b39167 SHA256 9da1e375920369667c0234f36c8bc2944f66b1e87d0a26216ddd41b2283a1a6a
 EBUILD git-sources-2.6.33_rc6.ebuild 1243 RMD160 9252d8d20b89dca804ceb617ecb5e18516d9da38 SHA1 10f1d1f60bb6f9a44247350926deb5c9fb55b7f3 SHA256 e3720b1ba1acf59f2a7cd4dee87ac116e264cde574e519c5ea9f9e2603a6db7b
 EBUILD git-sources-2.6.33_rc7-r1.ebuild 1246 RMD160 3c86881141c0022759798a021d98e048df4a02f4 SHA1 80a790c484596a7760ffc4289139771154012091 SHA256 07636b9241879a9dc2d55fae212d73abc05d206e755260b646596620eab0146b
+EBUILD git-sources-2.6.33_rc7-r2.ebuild 1246 RMD160 0fd1c2cbf442a3f3962ace7a09cd101b754dd5ef SHA1 cc0d853ebdab8e6a30cb5c1b673b4d25f8ef0f57 SHA256 3d7df3edc7030380d4bb8e7992f2431aa396911f01a6b856d917abed3f4b9a55
 EBUILD git-sources-2.6.33_rc7.ebuild 1243 RMD160 cd2bfd6186ffd64872c0bd1866a6d59951b26d17 SHA1 57ab2551f70f6f5c193566c2330770827f193686 SHA256 8e150e4577079f4f2fc99cc5d604a1cab2ca302abb25f4753cf36c10daa96f93
-MISC ChangeLog 139738 RMD160 1f5867373248215d31b040d5c811af9eb14f3953 SHA1 49cdad2f6e97b8a71d0bccf5f3911f22fb5d60cf SHA256 242de0ec200ae4dc6d2dd2d8bf6f4f4eee1dd07833f4a921dc512cf4c444d3d5
+MISC ChangeLog 139884 RMD160 96b099e174a5aba523143ad19dde9fb72a6d76ca SHA1 bef45bfac8e9788688c7af50ce0fd0cd21fe4d17 SHA256 317fba4b272760ca2b8da187fb19b2cd2b91fc5af60e811256904905e8cda3ca
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAktwtpUACgkQPDPGULV25OMJyACfUXuXfAidz1jnn2vuceqVvH8Q
+SsYAoNehGm02vgVtkg5Y7wpsUNXUltc4
+=pHpy
+-----END PGP SIGNATURE-----
