@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.733 2010/02/08 13:18:13 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.734 2010/02/09 01:12:11 mpagano Exp $
+
+*git-sources-2.6.33_rc7-r2 (09 Feb 2010)
+
+  09 Feb 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.33_rc7-r2.ebuild:
+  Version bump
 
 *git-sources-2.6.33_rc7-r1 (08 Feb 2010)
 
